--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "readme generator",
   "main": "index.js",
   "scripts": {
-    "test": "readme"
+    "test": "readme",
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
